--- a/requirements.txt
+++ b/requirements.txt
@@ -18,10 +18,12 @@ google-api-core==2.25.1
 google-api-python-client==2.176.0
 google-auth==2.40.3
 google-auth-httplib2==0.2.0
+google-auth-oauthlib==1.2.2
 google-generativeai==0.8.5
 googleapis-common-protos==1.70.0
 grpcio==1.73.1
 grpcio-status==1.71.2
+gspread==6.2.1
 gunicorn==23.0.0
 h11==0.16.0
 httpcore==1.0.9
@@ -37,6 +39,7 @@ lxml==6.0.0
 MarkupSafe==3.0.2
 narwhals==1.46.0
 numpy==2.3.1
+oauthlib==3.3.1
 openai==1.93.0
 packaging==25.0
 pandas==2.3.1
@@ -57,6 +60,7 @@ python-dotenv==1.0.0
 pytz==2025.2
 referencing==0.36.2
 requests==2.32.4
+requests-oauthlib==2.0.0
 rpds-py==0.26.0
 rsa==4.9.1
 six==1.17.0
