--- a/requirements.txt
+++ b/requirements.txt
@@ -39,6 +39,7 @@ lxml==6.0.0
 MarkupSafe==3.0.2
 narwhals==1.46.0
 numpy==2.3.1
+oauth2client==4.1.3
 oauthlib==3.3.1
 openai==1.93.0
 packaging==25.0
